# pluxee-api

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUILD  GUIDELINES  INFO.md  LICENSE  README.md  bandit.yaml  pants.toml  pyproject.toml  requirements.txt  requirements_async.txt  requirements_dev.txt  requirements_doc.txt  tox.ini
.github/workflows/: python-publish.yml  python-tests.yml
docs/source/: api_reference.rst  conf.py  index.rst  modules.rst  pluxee.rst
examples/: example_usage.py  example_usage_async.py
pluxee/: __init__.py  aia_chaser.py  base_pluxee_client.py  exceptions.py  pluxee_async_client.py  pluxee_client.py
tests/: conftest.py  test_async_pluxee_api.py  test_pluxee_api.py  test_pluxee_balance.py  test_pluxee_transaction.py
tests/test_data/: content_balance.html  content_empty_balance.html  content_malformed_transactions.html  content_transactions.html
